Json version fix button play

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.aaaa.playband">
+          package="com.materialviewinc.playband">
 
     <application
             android:allowBackup="true"
@@ -9,16 +9,16 @@
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
-        <activity android:name="com.aaaa.playband.Activities.HomeActivity">
+        <activity android:name="com.materialviewinc.playband.Activities.HomeActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name="com.aaaa.playband.Activities.AlbumListActivity">
+        <activity android:name="com.materialviewinc.playband.Activities.AlbumListActivity">
         </activity>
-        <activity android:name="com.aaaa.playband.Activities.TrackActivity">
+        <activity android:name="com.materialviewinc.playband.Activities.TrackActivity">
         </activity>
     </application>
 
